# fipa-wasm

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.flow-demo  README.md  docker-compose.yml  fipa.wit
agents/ams/: Cargo.toml
agents/ams/src/: lib.rs
agents/ba/: Cargo.toml
agents/ba/src/: lib.rs
agents/bs/: Cargo.toml
agents/bs/src/: lib.rs
agents/df/: Cargo.toml
agents/df/src/: lib.rs
agents/greeter/: Cargo.toml
agents/greeter/src/: lib.rs
agents/pa/: Cargo.toml
agents/pa/src/: lib.rs
crates/fipa-wasm-agents/: Cargo.toml  build.rs
crates/fipa-wasm-agents/agents/: chat_agent.wat
crates/fipa-wasm-agents/benches/: protocol_bench.rs
crates/fipa-wasm-agents/examples/agents/behavior-demo/: Cargo.toml
crates/fipa-wasm-agents/examples/agents/behavior-demo/wit/: fipa.wit
crates/fipa-wasm-agents/examples/agents/calculator/: README.md
crates/fipa-wasm-agents/examples/agents/counter/: README.md
crates/fipa-wasm-agents/examples/agents/counter/src/: lib.rs
crates/fipa-wasm-agents/examples/agents/ping-pong/: Cargo.toml
crates/fipa-wasm-agents/examples/agents/ping-pong/src/: lib.rs
crates/fipa-wasm-agents/src/: agent.rs  contractor_agent.rs  identity.rs  lib.rs  manifest.rs  protocols.rs
crates/fipa-wasm-agents/src/actor/: agent_actor.rs  messages.rs  registry.rs  supervisor.rs
crates/fipa-wasm-agents/src/adapters/: crypto.rs  engine.rs  mod.rs  noise.rs  store.rs
crates/fipa-wasm-agents/src/consensus/: network.rs  storage.rs  types.rs
crates/fipa-wasm-agents/src/content/: block.rs  mod.rs  ontology.rs  sl_codec.rs  unl.rs  verify.rs
crates/fipa-wasm-agents/src/interplatform/: address.rs  http_mtp.rs
crates/fipa-wasm-agents/src/mcp/: mod.rs  protocol.rs  resources.rs
crates/fipa-wasm-agents/src/network/: discovery.rs  grpc.rs  transport.rs
crates/fipa-wasm-agents/src/observability/: mod.rs  tracing_setup.rs
crates/fipa-wasm-agents/src/persistence/: mod.rs  recovery.rs  snapshot.rs  storage.rs
crates/fipa-wasm-agents/src/platform/: df.rs
crates/fipa-wasm-agents/src/process/: agents.rs  manage.rs  migrate.rs  mod.rs  node.rs  resolve.rs  router.rs
crates/fipa-wasm-agents/src/proto/: mod.rs
crates/fipa-wasm-agents/src/protocol/: brokering.rs  dutch_auction.rs  iterated_contract_net.rs  mod.rs  propose.rs  query.rs  state_machine.rs
crates/fipa-wasm-agents/src/security/: auth.rs  credentials.rs  mod.rs  permissions.rs  policy.rs
crates/fipa-wasm-agents/src/tools/: sniffer.rs
crates/fipa-wasm-agents/src/trust/: identity.rs  mod.rs  signature.rs  store.rs
crates/fipa-wasm-agents/src/wasm/: agent_runtime.rs  host.rs  mod.rs  runtime.rs  wasmi_engine.rs
crates/fipa-wasm-agents/tests/: process_isolation.rs
crates/node-core/: Cargo.toml
crates/node-core/src/: crypto.rs  lib.rs  noise.rs  resolver.rs  wire.rs
crates/node-shim/: Cargo.toml
crates/node-shim/src/: agent.rs  crypto.rs  lib.rs  noise.rs  run.rs  wire.rs
crates/unl-a2a/: Cargo.toml
crates/unl-a2a/src/: codec.rs  lib.rs
crates/unl-agent/: Cargo.toml
crates/unl-agent/src/: lib.rs
crates/unl-core/: Cargo.toml
crates/unl-core/src/: attr.rs  error.rs  graph.rs  lib.rs  relation.rs  traits.rs  ucl.rs  uw.rs
crates/unl-fipa/: Cargo.toml
crates/unl-fipa/src/: lib.rs  performative.rs  sexpr.rs
crates/unl-kb/: Cargo.toml
crates/unl-kb/src/: graph_kb.rs  lib.rs  mem.rs  sled_kb.rs  vocabulary.rs  wordnet.rs
crates/unl-llm/: Cargo.toml
crates/unl-llm/src/: embed.rs  error.rs  lib.rs  ollama.rs  tests.rs  unlizer.rs
crates/unl-parser/: Cargo.toml
crates/unl-parser/src/: error.rs  grammar.rs  legacy.rs  lib.rs  list.rs  table.rs  tests.rs  xml.rs
crates/unl-validator/: Cargo.toml
crates/unl-validator/src/: checks.rs  diagnostic.rs  lib.rs  normalize.rs  tests.rs
data/: attributes.toml  relations.toml
data/kb-seed/: memkb-fixture.toml
docker/: Dockerfile  README.md  docker-compose.yml
docs/: AGENT_DEVELOPMENT.md  AGENT_HOST_ABI.md  ARCHITECTURE.md  EMAIL_DRAFT.md  FUTURE_ENHANCEMENTS.md  INTERACTION_PROTOCOLS.md  M2_VERIFICATION_GATE.md  MOBILITY.md  NODE_DESIGN.md  PLAN_MCP_AGENT.md  PROJECT_SUMMARY.md  PROTOCOLS.md  RADE_FEATURES.md  THREAT_MODEL.md
docs/agents/: AMS_DESIGN.md  DF_DESIGN.md  PA_DESIGN.md
examples/agents/behavior-demo/: README.md
examples/agents/behavior-demo/src/: lib.rs
examples/agents/calculator/: Cargo.toml
examples/agents/calculator/src/: lib.rs
examples/agents/counter/: Cargo.toml
examples/agents/counter/src/: lib.rs
examples/agents/ping-pong/: README.md
examples/agents/ping-pong/src/: lib.rs
firmware/esp32-node/: Cargo.toml  README.md  partitions.csv  rust-toolchain.toml  sdkconfig.defaults
firmware/esp32-node/.cargo/: config.toml
firmware/esp32-node/src/: main.rs
src/: acl_message.rs  lib.rs  request_agent.rs
src/actor/: mod.rs  supervisor.rs
src/behavior/: mod.rs
src/consensus/: mod.rs  state.rs
src/content/: codec.rs  mod.rs
src/interplatform/: acc.rs  envelope.rs  mod.rs  mtp.rs
src/mcp/: server.rs  tools.rs  transport.rs
src/network/: mod.rs  routing.rs
src/observability/: metrics.rs
src/platform/: ams.rs  mod.rs
src/proto/: fipa.proto
src/protocol/: contract_net.rs  english_auction.rs  mod.rs  recruiting.rs  request.rs  subscribe.rs
src/security/: mod.rs
src/tools/: dashboard.rs  mod.rs
src/trust/: web.rs
src/wasm/: host.rs
templates/full/: Cargo.toml.tmpl  README.md.tmpl
templates/full/src/: lib.rs.tmpl
templates/minimal/: Cargo.toml.tmpl
templates/minimal/src/: lib.rs.tmpl
templates/stateless/: Cargo.toml.tmpl
templates/stateless/src/: lib.rs.tmpl
xtask/: Cargo.toml
xtask/src/: main.rs
