[package]
name = "fipa-wasm-agents"
version = "0.2.0"
edition = "2024"
authors = ["SavageS"]
description = "FIPA WASM Distributed Agent System with Actor Model, libp2p, and Raft Consensus"
license = "MIT"
repository = "https://github.com/greenpdx/fipa-wasm"
keywords = ["fipa", "wasm", "agents", "distributed", "actor"]
categories = ["network-programming", "wasm", "concurrency"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.1", features = ["serde"] }

# Protocol Buffers / gRPC
prost = "0.14"
prost-types = "0.14"
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-reflection = "0.14"
tonic-prost = "0.14"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["serde"] }
rand = "0.9"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Actor framework
actix = "0.13"
actix-rt = "2.10"

# Networking - libp2p
libp2p = { version = "0.56", features = [
    "tokio",
    "tcp",
    "quic",
    "noise",
    "yamux",
    "mdns",
    "kad",
    "gossipsub",
    "request-response",
    "identify",
    "autonat",
    "relay",
    "dcutr",
    "macros",
    "serde",
] }

# WASM runtime - Component Model
wasmtime = { version = "40", features = ["component-model", "async"] }
wasmtime-wasi = "40"

# Consensus
openraft = { version = "0.9", features = ["serde"] }

# Storage
# rocksdb = "0.24"  # Disabled - requires libclang
sled = "0.34"  # Embedded database alternative

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
axum = "0.8"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Configuration
config = "0.15"
clap = { version = "4.5", features = ["derive"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
hex = "0.4"
colored = "2.1"
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
parking_lot = "0.12"
bytes = "1.9"
derive_more = { version = "2.0", features = ["display", "from", "into"] }

[build-dependencies]
tonic-prost-build = "0.14"
prost-build = "0.14"

[patch.crates-io]
# Workaround for cc 1.2.51 compatibility issue with target-lexicon
cc = { git = "https://github.com/rust-lang/cc-rs" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.19"
criterion = { version = "0.8", features = ["async_tokio"] }
proptest = "1.6"

[features]
default = ["full"]
full = ["consensus", "metrics"]
consensus = []
metrics = []
mcp = []  # Model Context Protocol server for Claude integration

[lib]
name = "fipa_wasm_agents"
path = "src/lib.rs"

[[bin]]
name = "fipa-node"
path = "src/bin/agent_node.rs"

[[bin]]
name = "fipa-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "fipa-agent-new"
path = "src/bin/agent_new.rs"

[[bin]]
name = "fipa-tui"
path = "src/bin/tui.rs"

[[bin]]
name = "fipa-mcp"
path = "src/bin/fipa_mcp.rs"
required-features = ["mcp"]

[[bench]]
name = "protocol_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
