# Workspace manifest.
#
# Holds two product lines that share a build:
#   * fipa-wasm-agents — the existing FIPA WASM distributed agent system
#   * unl-*            — the open Rust UNL stack (see ~/SOURCES_MANIFEST.md)
#
# Profiles and [patch.crates-io] are workspace-global and must live here, not in
# member manifests.
[workspace]
resolver = "3"
members = [
    "crates/fipa-wasm-agents",
    "crates/unl-core",
    "crates/unl-parser",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/greenpdx/fipa-wasm"

# Shared dependency versions. Members opt in with `dep.workspace = true`, keeping
# versions aligned across the workspace.
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
smol_str = { version = "0.3", features = ["serde"] }
indexmap = { version = "2.7", features = ["serde"] }

[patch.crates-io]
# Workaround for cc 1.2.51 compatibility issue with target-lexicon
cc = { git = "https://github.com/rust-lang/cc-rs" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
