[package]
name = "ba-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Buyer Agent (BA): the book-buy conversation, mobile (wasm32)."

[lib]
# cdylib for the wasm32 agent; rlib so the node can also run it natively.
crate-type = ["cdylib", "rlib"]

[dependencies]
unl-agent = { path = "../../crates/unl-agent" }
unl-core = { path = "../../crates/unl-core" }
unl-parser = { path = "../../crates/unl-parser" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
