[package]
name = "bs-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Seller Agent (BS): catalog + reserve/ship around PA's escrow."

[dependencies]
unl-agent = { path = "../../crates/unl-agent" }
unl-core = { path = "../../crates/unl-core" }
unl-parser = { path = "../../crates/unl-parser" }
serde_json = "1.0"
