[package]
name = "df-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Directory Facilitator (yellow pages): service -> provider agent."

[dependencies]
unl-agent = { path = "../../crates/unl-agent" }
unl-core = { path = "../../crates/unl-core" }
unl-parser = { path = "../../crates/unl-parser" }
serde_json = "1.0"
