[package]
name = "greeter-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sample wasm agent — the wasm template (built for wasm32-unknown-unknown)."

[lib]
crate-type = ["cdylib"]

[dependencies]
unl-agent = { path = "../../crates/unl-agent" }
