[package]
name = "pa-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Payment Agent: escrow/hold settlement between a buyer and a seller."

[dependencies]
unl-agent = { path = "../../crates/unl-agent" }
unl-core = { path = "../../crates/unl-core" }
unl-parser = { path = "../../crates/unl-parser" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
