[package]
name = "node-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Shared FIPA node transport primitives: signed message envelope (R1), Ed25519 identity, and Noise XX channel (R2). Used by both the full node and the embedded node-shim."

# The wire primitives both the server-class node (fipa-wasm-agents) and the
# embedded node-shim build on. Crypto + Noise + hashing + entropy only — no async
# runtime, no serde, no wasm.
[dependencies]
ed25519-dalek = "2.1"
snow = "0.9"
rand = "0.9"
