[package]
name = "node-shim"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Minimal FIPA node-shim: agent + protocol in one binary, no wasm engine, for embedded (ESP32/esp-idf) targets"

# The transport primitives come from the shared node-core crate; the shim adds only
# the embedded agent contract and the single-agent run loop on top.
[dependencies]
node-core = { path = "../node-core" }

[[bin]]
name = "shim-demo"
path = "src/bin/shim_demo.rs"
