[package]
name = "unl-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Author-facing agent API: one Agent trait, two targets (native or wasm32)."

[lib]
# rlib for native linking (DF/AMS/PA); cdylib for wasm32 agents (BA/BS).
crate-type = ["rlib", "cdylib"]

[dependencies]
